added 4-dslanguages.png and updated Jupyter Notebook

--- a/DataScienceEcosystem.ipynb
+++ b/DataScienceEcosystem.ipynb
@@ -10,16 +10,36 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e8921b6e",
+   "id": "e0a36c62",
    "metadata": {},
    "source": [
     "In this notebook, Data Science Tools and Ecosystem are summarized."
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "449b52f8",
+   "metadata": {},
+   "source": [
+    "Some of the popular languages that Data Scientists use are:\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f8595931",
+   "metadata": {},
+   "source": [
+    "1. Python\n",
+    "2. R\n",
+    "3. SQL\n",
+    "4. Julia\n",
+    "5. Scala"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "ff70439a",
+   "id": "a76af5f6",
    "metadata": {},
    "outputs": [],
    "source": []
