added 5-dslibraries.png and updated Jupyter Notebook

--- a/DataScienceEcosystem.ipynb
+++ b/DataScienceEcosystem.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e0a36c62",
+   "id": "adb10cff",
    "metadata": {},
    "source": [
     "In this notebook, Data Science Tools and Ecosystem are summarized."
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "449b52f8",
+   "id": "9db6217e",
    "metadata": {},
    "source": [
     "Some of the popular languages that Data Scientists use are:\n"
@@ -26,7 +26,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f8595931",
+   "id": "ebb009d3",
    "metadata": {},
    "source": [
     "1. Python\n",
@@ -37,12 +37,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fe016f56",
+   "metadata": {},
+   "source": [
+    "Some of the commonly used libraries used by Data Scientists include:\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "31235e99",
+   "metadata": {},
+   "source": [
+    "1. Pandas\n",
+    "2. Numpy\n",
+    "3. Matplotlib\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a76af5f6",
+   "id": "131baeb2",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "\n"
+   ]
   }
  ],
  "metadata": {
